more work on formuladb.io content

--- a/apps/formuladb-internal/formuladb.io/_footer.html
+++ b/apps/formuladb-internal/formuladb.io/_footer.html
@@ -33,7 +33,7 @@
 
 </head>
 
-<body data-frmdb-tenant="formuladb-internal" data-frmdb-app="formuladb.io" class="frmdb-editor-on">
+<body data-frmdb-tenant="formuladb-internal" data-frmdb-app="formuladb.io">
     <footer class="pt-4 my-md-5 pt-md-5 border-top">
         <div class="row">
             <div class="col-12 col-md mx-4">
