--- a/apps/formuladb-internal/formuladb.io/_nav.html
+++ b/apps/formuladb-internal/formuladb.io/_nav.html
@@ -41,7 +41,7 @@
 
 </head>
 
-<body style="width: 100vw; height: 100vh; background: linear-gradient(150deg,#7795f8 15%,#6772e5 70%,#555abf 94%);" class="frmdb-editor-on">
+<body style="width: 100vw; height: 100vh; background: linear-gradient(150deg,#7795f8 15%,#6772e5 70%,#555abf 94%);">
     <nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom">
         <div class="container">
             <a class="navbar-brand mr-lg-5" href="index.html">
