--- a/apps/formuladb-internal/formuladb.io/index.html
+++ b/apps/formuladb-internal/formuladb.io/index.html
@@ -30,9 +30,11 @@
     <link type="text/css" href="assets/css/argon.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 
+
+
 </head>
 
-<body data-frmdb-tenant="formuladb-internal" data-frmdb-app="formuladb.io" class="" style="">
+<body data-frmdb-tenant="formuladb-internal" data-frmdb-app="formuladb.io" style="">
     <div class="corner-ribbon top-left red shadow">Coming Soon 28 Oct</div>
     <div style="position: absolute; top: 0; width: 100%">
         <div class="section section-shaped" style="height: 700px">
@@ -69,7 +71,9 @@
 
 
 
+
                             <br> Web Applications
+
 
 
 
@@ -83,9 +87,11 @@
 
 
 
+
                         </h1>
                         <p class="lead  text-white">
                             <strong>50+</strong> samples, easy to customize and combine, start in minutes.
+
 
 
 
@@ -140,7 +146,7 @@
                         <span data-frmdb-value=":$ID:$FRMDB.AppCategory[]._id">Food &amp; Travel</span>
                     </a>
                 </li>
-                <li class="nav-item" data-frmdb-table="$FRMDB.AppCategory[]" data-frmdb-record="AppCategory~~Maintenance &amp; Support" data-frmdb-table-limit="10">
+                <li class="nav-item" data-frmdb-table="$FRMDB.AppCategory[]" data-frmdb-record="AppCategory~~Maintenance &amp; Support" data-frmdb-table-limit="10" style="display: none;">
                     <a href="#" class="nav-link frmdb-isotope-filter" data-frmdb-attr="data-filter::$FRMDB.AppCategory[]._id" data-filter="AppCategory~~Maintenance &amp; Support">
                         <span data-frmdb-value=":$ID:$FRMDB.AppCategory[]._id">Maintenance &amp; Support</span>
                     </a>
@@ -160,11 +166,23 @@
                         <span data-frmdb-value=":$ID:$FRMDB.AppCategory[]._id">Startup Management</span>
                     </a>
                 </li>
-                <li class="nav-item dropdown show">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         More
                     </a>
-                    <div class="dropdown-menu category-list frmdb-responsive-nav-more-items-dropdown show" aria-labelledby="navbarDropdown">
+                    <div class="dropdown-menu category-list frmdb-responsive-nav-more-items-dropdown" aria-labelledby="navbarDropdown">
+                        <a href="#" class="frmdb-isotope-filter dropdown-item" data-frmdb-attr="data-filter::$FRMDB.AppCategory[]._id" data-filter="AppCategory~~Medical &amp; Health">
+                            <span data-frmdb-value=":$ID:$FRMDB.AppCategory[]._id">Medical &amp; Health</span>
+                        </a>
+                        <a href="#" class="frmdb-isotope-filter dropdown-item" data-frmdb-attr="data-filter::$FRMDB.AppCategory[]._id" data-filter="AppCategory~~Sports &amp; Fitness">
+                            <span data-frmdb-value=":$ID:$FRMDB.AppCategory[]._id">Sports &amp; Fitness</span>
+                        </a>
+                        <a href="#" class="frmdb-isotope-filter dropdown-item" data-frmdb-attr="data-filter::$FRMDB.AppCategory[]._id" data-filter="AppCategory~~Startup Management">
+                            <span data-frmdb-value=":$ID:$FRMDB.AppCategory[]._id">Startup Management</span>
+                        </a>
+                        <a href="#" class="frmdb-isotope-filter dropdown-item" data-frmdb-attr="data-filter::$FRMDB.AppCategory[]._id" data-filter="AppCategory~~Maintenance &amp; Support">
+                            <span data-frmdb-value=":$ID:$FRMDB.AppCategory[]._id">Maintenance &amp; Support</span>
+                        </a>
                         <a href="#" class="frmdb-isotope-filter dropdown-item" data-frmdb-attr="data-filter::$FRMDB.AppCategory[]._id" data-filter="AppCategory~~Medical &amp; Health">
                             <span data-frmdb-value=":$ID:$FRMDB.AppCategory[]._id">Medical &amp; Health</span>
                         </a>
@@ -861,14 +879,6 @@
         })
     </script>
     <script src="/formuladb/frmdb-fe.js"></script>
-    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
-    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
-    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
-    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
-    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
-    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
-    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
-    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
     <div class="modal" id="frmdbModal" style="display: none;" aria-hidden="true">
         <div data-frmdb-record="WishListRequest~~__FRMDB_NEW_RECORD__" style="display: initial" role="dialog" tabindex="-1" class="modal" id="frmdbModal">
             <div role="document" class="modal-dialog">
@@ -909,6 +919,7 @@
             </div>
         </div>
     </div>
+    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
 </body>
 
 </html>
