--- a/apps/formuladb-internal/formuladb.io/no-code.html
+++ b/apps/formuladb-internal/formuladb.io/no-code.html
@@ -30,10 +30,9 @@
     <link type="text/css" href="assets/css/argon.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 
-
 </head>
 
-<body data-frmdb-tenant="formuladb-internal" data-frmdb-app="formuladb.io" class="frmdb-editor-on">
+<body data-frmdb-tenant="formuladb-internal" data-frmdb-app="formuladb.io">
     <div class="corner-ribbon top-left red shadow">Coming Soon 28 Oct</div>
     <div style="position: absolute; top: 0; width: 100%">
         <div class="section section-shaped" style="height: 30vh">
@@ -62,11 +61,9 @@
         <div class="container" style="position: relative; z-index: 2">
             <div class="card card-profile shadow mx-3 mx-md-5">
                 <div class="card-body">
-                    <h1>Low Code</h1>
-                    <h3>For Small and Micro Businesses</h3>
-                    <h5>
-                        <p>Micro and even Small businesses usually don't have dedicated team members with formal IT training, unless of course the business operates in the IT industry. FormulaDB high level language of Tables, Formulas and Pages empower non-developers to setup websites and web applications for managing the entire business.</p>
-                    </h5>
+                    <h1>No-Code vs Low-Code</h1>
+                    <p>No-code aims to allow users without any formal IT training to quickly setup websites and web applications for managing virtually any aspect of their business or project. This will be achieved by customizing one of the many ready-to-use apps templates using simple construct such as Tables, Spreadsheet-like Formulas, Pages.</p>
+                    <p>Low-code aims to eliminate much of the repetitive and business-related work the developers and IT people usually have perform. It frees valuable software development and IT specialist team members to focus on technical aspects that cannot be managed by business focused team members such as: integrations with custom and/or legacy systems, develop custom functions, develop custom Page components and widgets, troubleshoot issues with Pages, Tables, Formulas, performance, backups and restore, high availability and geographical redundancy, "big data".</p>
                 </div>
             </div>
         </div>
