--- a/apps/formuladb-internal/formuladb.io/low-code.html
+++ b/apps/formuladb-internal/formuladb.io/low-code.html
@@ -35,7 +35,7 @@
 
 </head>
 
-<body data-frmdb-tenant="formuladb-internal" data-frmdb-app="formuladb.io" class="frmdb-editor-on">
+<body data-frmdb-tenant="formuladb-internal" data-frmdb-app="formuladb.io">
     <div class="corner-ribbon top-left red shadow">Coming Soon 28 Oct</div>
     <div style="position: absolute; top: 0; width: 100%">
         <div class="section section-shaped" style="height: 50vh">
