added e2e for change theme color and change language

--- a/vvvebjs/editor.html
+++ b/vvvebjs/editor.html
@@ -114,7 +114,8 @@
 				</button>
 				<div class="dropdown-menu" aria-labelledby="frmdb-editor-color-palette-select">
 				</div>
-
+			</div>
+			<div class="btn-group mr-3" role="menu">
 				<button class="btn btn-sm" id="frmdb-editor-i18n-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					<i class="flag-icon flag-icon-gb"></i>
 				</button>
