e2e: added cards data binding, repeat 7 cards with img and text

--- a/apps/formuladb-examples/hotel-booking/index.html
+++ b/apps/formuladb-examples/hotel-booking/index.html
@@ -106,7 +106,7 @@
                 <div class="col-lg-3 col-sm-6">
                     <div class="accomodation_item text-center">
                         <div class="hotel_img">
-                            <img src="theme/image/room1.jpg" alt="">
+                            <img src="theme/image/room1.jpg" width="263" height="270" alt="">
                             <a href="#" class="btn theme_btn button_hover">Book Now</a>
                         </div>
                         <a href="#">
