--- a/vvvebjs/editor.html
+++ b/vvvebjs/editor.html
@@ -5,10 +5,10 @@
 	<script src="https://storage.googleapis.com/formuladb-static-assets/elastic-apm-rum.umd.min.js">
 	</script>
 	<script>
-	  elasticApm.init({
-		serviceName: 'formuladb-editor',
-		serverUrl: 'https://apmserver.formuladb.io'
-	  })
+		elasticApm.init({
+			serviceName: 'formuladb-editor',
+			serverUrl: 'https://apmserver.formuladb.io'
+		})
 	</script>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,7 +22,7 @@
 
 	<link href="css/editor.css" rel="stylesheet">
 	<link href="css/line-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/formuladb/icons/icons.css" />
+	<link rel="stylesheet" type="text/css" href="/formuladb/icons/icons.css" />
 
 	<style>
 		#vvveb-code-editor .CodeMirror {
@@ -37,15 +37,15 @@
 		}
 
 		#left-panel .component-properties .nav {
-			height: 38px; 
+			height: 38px;
 		}
 
-		#vvveb-builder #left-panel .component-properties .form-group > label {
-			margin: 0; 
+		#vvveb-builder #left-panel .component-properties .form-group>label {
+			margin: 0;
 		}
 
 		#left-panel .component-properties .tab-content {
-			overflow: auto; 
+			overflow: auto;
 			height: calc(100vh - var(--builder-filemanager-height) - 132px);
 		}
 
@@ -87,7 +87,7 @@
 					data-vvveb-action="fullscreen">
 					<i class="la la-arrows"></i>
 				</button>
-<!-- 
+				<!-- 
 				<button id="code-editor-btn" data-view="mobile" class="btn btn-sm btn-light btn-sm" title="Code Editor"
 					data-vvveb-action="togglePageEditor">
 					<i class="la la-file-code-o"></i>
@@ -109,7 +109,8 @@
 			</div>
 
 			<div class="btn-group mr-3" role="menu">
-				<button class="btn btn-sm" id="frmdb-editor-color-palette-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				<button class="btn btn-sm" id="frmdb-editor-color-palette-select" type="button" data-toggle="dropdown" aria-haspopup="true"
+					aria-expanded="false">
 					<i class="la la-square text-success"></i>
 				</button>
 				<div class="dropdown-menu" aria-labelledby="frmdb-editor-color-palette-select">
@@ -146,9 +147,8 @@
 			<div style="border-bottom: 1px solid #BDC3C7; background:linear-gradient(150deg,#7795f8 15%,#6772e5 70%,#555abf 94%)">
 				<img src="/formuladb/img/logo.png" style="width: 110px; height: 32px;" />
 				<div class="dropdown float-right">
-					<button class="btn btn-sm dropdown-toggle text-light" type="button" id="dropdownMenuButton" 
-						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-						title="Test/Playground Environments (Coming Soon)">
+					<button class="btn btn-sm dropdown-toggle text-light" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+						aria-expanded="false" title="Test/Playground Environments (Coming Soon)">
 						<span class="badge badge-pill badge-light text-danger">live</span>
 					</button>
 					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
@@ -163,8 +163,8 @@
 					<a class="nav-link disabled" href="javascript:void(0)" tabindex="-1" aria-disabled="true">Table</a>
 				</li>
 				<li class="nav-item dropdown flex-grow-1">
-					<a class="nav-link dropdown-toggle text-center" data-toggle="dropdown" href="javascript:void(0)"
-						aria-haspopup="true" aria-expanded="false" data-frmdb-value="$frmdb.selectedTableId">
+					<a class="nav-link dropdown-toggle text-center" data-toggle="dropdown" href="javascript:void(0)" aria-haspopup="true" aria-expanded="false"
+						data-frmdb-value="$frmdb.selectedTableId">
 					</a>
 					<div class="dropdown-menu">
 						<a class="dropdown-item" data-frmdb-table="$frmdb.tables[]" data-frmdb-value="$frmdb.tables[]._id" href="javascript:void(0)">table 1</a>
@@ -177,7 +177,8 @@
 					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="table-options">
 						<a class="dropdown-item" id="new-table-btn" title="New Table"><i class="la la-plus-circle"></i> New Table</a>
 						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" id="delete-table-btn" title="Delete Table" data-frmdb-prop="tableToDelete::$frmdb.selectedTableId"><i class="la la-trash"></i> Delete <span data-frmdb-value="$frmdb.selectedTableId"></span></a>
+						<a class="dropdown-item" id="delete-table-btn" title="Delete Table" data-frmdb-prop="tableToDelete::$frmdb.selectedTableId"><i
+								class="la la-trash"></i> Delete <span data-frmdb-value="$frmdb.selectedTableId"></span></a>
 					</div>
 				</li>
 			</ul>
@@ -203,7 +204,8 @@
 					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="table-options">
 						<a class="dropdown-item" id="new-page-btn" title="New Page"><i class="la la-plus-circle"></i> New Page</a>
 						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" id="delete-page-btn" title="Delete Page" data-frmdb-prop="pagePathToDelete::$frmdb.selectedPagePath"><i class="la la-trash"></i> Delete <span data-frmdb-value="$frmdb.selectedPageName"></span></a>
+						<a class="dropdown-item" id="delete-page-btn" title="Delete Page" data-frmdb-prop="pagePathToDelete::$frmdb.selectedPagePath"><i
+								class="la la-trash"></i> Delete <span data-frmdb-value="$frmdb.selectedPageName"></span></a>
 					</div>
 				</li>
 			</ul>
@@ -222,22 +224,20 @@
 			<div class="component-properties">
 				<ul class="nav nav-tabs nav-fill flex-nowrap" id="properties-tabs" role="tablist">
 					<li class="nav-item content-tab">
-						<a class="nav-link active py-1" data-toggle="tab" href="#content-left-panel-tab" role="tab"
-							aria-controls="components" aria-selected="true">
+						<a class="nav-link active py-1" data-toggle="tab" href="#content-left-panel-tab" role="tab" aria-controls="components"
+							aria-selected="true">
 							<i class="la la-lg la-cube"></i>
 							Content
 						</a>
 					</li>
 					<li class="nav-item style-tab">
-						<a class="nav-link py-1" data-toggle="tab" href="#style-left-panel-tab" role="tab" aria-controls="blocks"
-							aria-selected="false">
+						<a class="nav-link py-1" data-toggle="tab" href="#style-left-panel-tab" role="tab" aria-controls="blocks" aria-selected="false">
 							<i class="la la-lg la-image"></i>
 							Style
 						</a>
 					</li>
 					<li class="nav-item data-tab">
-						<a class="nav-link py-1" data-toggle="tab" href="#data-left-panel-tab" role="tab" aria-controls="blocks"
-							aria-selected="false">
+						<a class="nav-link py-1" data-toggle="tab" href="#data-left-panel-tab" role="tab" aria-controls="blocks" aria-selected="false">
 							<i class="la la-lg la-database"></i>
 							Data
 						</a>
@@ -251,17 +251,14 @@
 				</ul>
 
 				<div class="tab-content">
-					<div class="tab-pane fade show active" id="content-left-panel-tab" data-section="content" role="tabpanel"
-						aria-labelledby="content-tab">
+					<div class="tab-pane fade show active" id="content-left-panel-tab" data-section="content" role="tabpanel" aria-labelledby="content-tab">
 						<div class="mt-4 text-center">Click on an element to edit.</div>
 					</div>
 
-					<div class="tab-pane fade show" id="style-left-panel-tab" data-section="style" role="tabpanel"
-						aria-labelledby="style-tab">
+					<div class="tab-pane fade show" id="style-left-panel-tab" data-section="style" role="tabpanel" aria-labelledby="style-tab">
 					</div>
 
-					<div class="tab-pane fade show" id="data-left-panel-tab" data-section="data" role="tabpanel"
-						aria-labelledby="data-tab">
+					<div class="tab-pane fade show" id="data-left-panel-tab" data-section="data" role="tabpanel" aria-labelledby="data-tab">
 					</div>
 				</div>
 			</div>
@@ -851,7 +848,7 @@
 									<div>
 										<select class="form-control custom-select" name="startTemplateUrl">
 											<option class="dropdown-item" data-frmdb-table="$frmdb.pages[]" data-frmdb-value="$frmdb.pages[].name"
-											data-frmdb-attr="value::$frmdb.pages[].url"></option>
+												data-frmdb-attr="value::$frmdb.pages[].url"></option>
 										</select>
 									</div>
 								</div>
@@ -861,7 +858,7 @@
 								<label class="col-sm-3 control-label">Page name</label>
 								<div class="col-sm-9 input-group">
 									<input name="title" type="text" class="form-control" placeholder="new-page-name" required pattern="[-a-zA-Z]+"
-									oninput="this.value = this.value.replace(/[^a-zA-Z_+]/g, '-')">
+										oninput="this.value = this.value.replace(/[^a-zA-Z_+]/g, '-')">
 									<div class="input-group-append">
 										<div class="input-group-text">.html</div>
 									</div>
@@ -972,6 +969,27 @@
 
 			</div>
 		</div>
+
+	</div>
+
+
+	<!-- new Column modal-->
+	<div class="modal fade modal-xl" id="intro-video-modal" style="width: 100vw; max-width: 100vw" tabindex="-1" role="dialog">
+		<div class="modal-dialog" role="document" style="width: 95vw; max-width: 95vw">
+			<div class="modal-content" style="width: 95vw; max-width: 95vw">
+				<div class="modal-header">
+					<p class="modal-title text-primary"><i class="la la-lg la-video"></i> Intro Video</p>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true"><small><i class="la la-close"></i></small></span>
+					</button>
+				</div>
+				<video width="100%" controls>
+					<source src="intro.avi" type="video/mp4">
+					Your browser does not support HTML5 video.
+				</video>
+			</div>
+		</div>
+	</div>
 
 	</div>
 
