small modifis for portal

--- a/vvvebjs/editor.html
+++ b/vvvebjs/editor.html
@@ -16,7 +16,7 @@
 
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<link rel="icon" href="favicon.ico">
+	<link rel="icon" href="/assets/favicon.png" type="image/png">
 	<base href="">
 	<title>FormulaDB Editor - Build Applications Without Code</title>
 
