--- a/apps/formuladb-internal/formuladb.io/_nav.html
+++ b/apps/formuladb-internal/formuladb.io/_nav.html
@@ -73,7 +73,7 @@
                         </a>
                         <div class="dropdown-menu">
                             <a href="no-code-vs-low-code.html" class="dropdown-item">No-Code vs Low-Code</a>
-                            <a href="no-code-for-small-businesse.html" class="dropdown-item">No-Code for Small Businesses</a>
+                            <a href="no-code.html#for-small-businesses" class="dropdown-item">No-Code for Small Businesses</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
