--- a/apps/formuladb-internal/formuladb.io/low-code.html
+++ b/apps/formuladb-internal/formuladb.io/low-code.html
@@ -23,7 +23,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Start your development with a Design System for Bootstrap 4.">
     <meta name="author" content="Creative Tim">
-    <title>FormulaDB - Build Applications Without Code</title>
+    <title>FormulaDB - Low Code Platform</title>
     <link href="assets/favicon.png" rel="icon" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
     <link href="assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
