--- a/apps/formuladb-internal/formuladb.io/low-code.html
+++ b/apps/formuladb-internal/formuladb.io/low-code.html
@@ -30,12 +30,9 @@
     <link type="text/css" href="assets/css/argon.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 
-
-
-
 </head>
 
-<body data-frmdb-tenant="formuladb-internal" data-frmdb-app="formuladb.io">
+<body data-frmdb-tenant="formuladb-internal" data-frmdb-app="formuladb.io" class="">
     <div class="corner-ribbon top-left red shadow">Coming Soon 28 Oct</div>
     <div style="position: absolute; top: 0; width: 100%">
         <div class="section section-shaped" style="height: 50vh">
@@ -71,7 +68,9 @@
                     <p>Coming soon...</p>
                     <h3>For Developers</h3>
                     <p>Over the years there were many visual tools that most developers don't enjoy
-                        <sup data-toggle="tooltip" data-placement="top" title="" data-original-title="TODO add references">*</sup>, because even if you can get a PoC up an running fast, tweaking, refactoring and maintaining the system in the long was a pain.
+
+                        <sup data-toggle="tooltip" data-placement="top" title="" data-original-title="TODO add references">*</sup>, because even if you can get a PoC up and running fast, tweaking, refactoring and maintaining the system in the long run was a pain.
+
                     </p>
                     <p>But the tools we love and use everyday as productive developers are also visual tools with tons of buttons, menus, options: vscode, Eclipse,
                         IntelliJ/Webstorm, github/gitlab, JIRA, etc.</p>
@@ -79,8 +78,8 @@
                         a new abstraction layer over the many layers we already have.</p>
                     <p>FormulaDB Low Code Platform tries to offer the same non-intrusive, lovable, helpful IDE-like experience for developers while also providing a simpler "No Code"
                         experience for non-developers.</p>
-                    <p>The "No Code" mode is less powerful, but its powerful enough so that in most cases business people can satisfy their own requirements using a
-                        higher level language: Tables, Formulas (computed columns, validations, rules), Pages. From this perspective FormulaDB is a also a good communication tool
+                    <p>The "No Code" mode is less powerful, but it's powerful enough so that in most cases business people can satisfy their own requirements using a
+                        higher level language: Tables, Formulas (computed columns, validations, rules), Pages. From this perspective, FormulaDB is a also a good communication tool
                         making business people and developers speak a common language which is powerful enough to implement a virtually unlimited number of use cases.</p>
                     <p>Developers will be the maintainers of the platform and formuladb language: tweak theme (CSS/HTML/JS), implement new components and themes to be used in
                         Pages, implement custom functions, provide support with Tables/Formulas/Pages, monitor the system for errors and/or performance issues.</p>
@@ -112,12 +111,6 @@
         })
     </script>
     <script src="/formuladb/frmdb-fe.js"></script>
-    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
-    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
-    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
-    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
-    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
-    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
 </body>
 
 </html>
