--- a/apps/formuladb-internal/formuladb.io/no-code-vs-low-code.html
+++ b/apps/formuladb-internal/formuladb.io/no-code-vs-low-code.html
@@ -23,20 +23,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Start your development with a Design System for Bootstrap 4.">
     <meta name="author" content="Creative Tim">
-    <title>FormulaDB - Build Applications Without Code</title>
+    <title>FormulaDB - No Code vs Low Code</title>
     <link href="assets/favicon.png" rel="icon" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
     <link href="assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
     <link type="text/css" href="assets/css/argon.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-
-
-
-
-
 </head>
 
-<body data-frmdb-tenant="formuladb-internal" data-frmdb-app="formuladb.io">
+<body data-frmdb-tenant="formuladb-internal" data-frmdb-app="formuladb.io" class="">
     <div class="corner-ribbon top-left red shadow">Coming Soon 28 Oct</div>
     <div style="position: absolute; top: 0; width: 100%">
         <div class="section section-shaped" style="height: 30vh">
@@ -66,8 +61,8 @@
             <div class="card card-profile shadow mx-3 mx-md-5">
                 <div class="card-body">
                     <h1>No-Code vs Low-Code</h1>
-                    <p>No-code aims to allow users without any formal IT training to quickly setup websites and web applications for managing virtually any aspect of their business or project. The business users of FormulaDB no-code platform will achieve this by customizing one of the many ready-to use apps templates using simple construct such as Tables, Spreadsheet-like Formulas, Pages.</p>
-                    <p>Low-code aims to eliminate much of the repetitive and business-related work the developers and IT people usually have perform. It frees valuable software development and IT specialist team members to focus on technical aspects that cannot be managed by business focused team members such as: integrations with custom and/or legacy systems, develop custom functions, develop custom Page components and widgets, troubleshoot issues with Pages, Tables, Formulas, performance, backups and restore, high availability and geographical redundancy, "big data".</p>
+                    <p>No-code aims to allow users without any formal IT training to quickly setup websites and web applications for managing virtually any aspect of their business or project. The business users of FormulaDB no-code platform will achieve this by customizing one of the many ready-to use apps templates using simple constructs such as Tables, Spreadsheet-like Formulas, Pages.</p>
+                    <p>Low-code aims to eliminate much of the repetitive and business-related work the developers and IT people usually have to perform. It frees valuable software development and IT specialist team members to focus on technical aspects that cannot be managed by business focused team members such as: integrations with custom and/or legacy systems, develop custom functions, develop custom Page components and widgets, troubleshoot issues with Pages, Tables, Formulas, performance, backups and restore, high availability and geographical redundancy, "big data".</p>
                 </div>
             </div>
         </div>
@@ -89,13 +84,6 @@
         })
     </script>
     <script src="/formuladb/frmdb-fe.js"></script>
-    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
-    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
-    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
-    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
-    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
-    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
-    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
 </body>
 
 </html>
